[project]
name = "comfyui-easyurlloader"
description = "load and download YouTube videos from URL's for quick and easy use for vid2vid cases."
version = "1.1.0"
license = {file = "LICENSE"}
dependencies = ["yt_dlp","ffmpeg-python"]

[project.urls]
Repository = "https://github.com/Apache0ne/ComfyUI-EasyUrlLoader"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "apacheone"
DisplayName = "ComfyUI-EasyUrlLoader"
Icon = ""